# chess_viewer

./: .gitignore  CMakeLists.txt  README.md  chess_screensaver_sdl.c  chess_viewer.c
.github/workflows/: release.yml
games/: Ding.pgn  Gelfand.pgn  Ivanchuk.pgn  Jobava.pgn  Nunn.pgn  Rapport.pgn
games/players/: Ding.pgn  Gelfand.pgn  Ivanchuk.pgn  Jobava.pgn  Nunn.pgn  Rapport.pgn
